# gradbot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  changelog.md  readme.md
.do/: app.yaml
personas/: inigo_v5_fr.json  leo_fr.json  sophie_en.json  yarden_mini.json
personas/systemprompts/: leo_fr.md  yarden_mini.md
server/: .env.template  agent.py  auth.py  dashboard_repository.py  deps.py  gradbot_session.py  latency.py  latency_collector.py  latency_report.py  latency_repository.py  llm_json.py  persona_snapshot.py  personas.py  prompting.py  pyproject.toml  recorder.py  recording.py  server.py  session_tasks.py  settings.py  storage.py  supabase_admin.py  tracing.py
server/migrations/: 001_init.sql  001_schema.sql  002_auth.sql  003_user_memory.sql  004_environment.sql  005_session_latency.sql  006_invites.sql  007_framework.sql
server/routes/: __init__.py  admin.py  auth.py  public.py  sessions.py
server/static/: app.js  auth.js  dashboard.css  dashboard.html  dashboard.js  format.js  index.html  session.html  session.js  style.css
server/tests/: conftest.py  fakes.py  test_agent.py  test_migrations.py  test_persona_snapshot.py  test_personas.py  test_prompting.py  test_session_tasks.py  test_tracing.py
